--- a/Cliente/src/ClientMain/cliente.fxml
+++ b/Cliente/src/ClientMain/cliente.fxml
@@ -12,7 +12,7 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <Button fx:id="boton1" mnemonicParsing="false" style="-fx-background-color: #b5bac9;" text="Conectar con servidor">
+   <Button fx:id="boton1" mnemonicParsing="false" style="-fx-background-color: #b5bac9;" text="Actualizar servidor">
       <font>
          <Font name="DejaVu Serif Condensed Bold" size="12.0" />
       </font></Button>
