--- a/Cliente/src/ClientMain/cliente.fxml
+++ b/Cliente/src/ClientMain/cliente.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -21,7 +22,7 @@
          <Font name="DejaVu Serif Condensed Bold" size="12.0" />
       </font>
    </Button>
-    <Button fx:id="botonPalabra" prefHeight="40.0" prefWidth="194.0" style="-fx-background-color: #b5bac9;" text="Presione para buscar">
+    <Button fx:id="botonPalabra" prefHeight="36.0" prefWidth="158.0" style="-fx-background-color: #b5bac9;" text="Presione para buscar">
       <font>
          <Font name="DejaVu Serif Condensed Bold" size="12.0" />
       </font></Button>
@@ -31,17 +32,38 @@
       </font>
    </Label>
    <TextField fx:id="texto" prefHeight="25.0" prefWidth="759.0" style="-fx-background-color: #b5bac9;" />
-   <Label text="Resultados de búsqueda" />
-   <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" />
-   <Button mnemonicParsing="false" text="&lt;">
+   <Label text="Resultados de búsqueda">
       <font>
-         <Font name="DejaVu Sans Condensed Bold" size="12.0" />
-      </font>
-   </Button>
-   <Label text="x de y" />
-   <Button mnemonicParsing="false" text="&gt;">
-      <font>
-         <Font name="DejaVu Sans Condensed Bold" size="12.0" />
-      </font>
-   </Button>
+         <Font name="DejaVu Serif Condensed Bold" size="12.0" />
+      </font></Label>
+   <Pane prefHeight="198.0" prefWidth="512.0">
+      <children>
+         <Button fx:id="a" layoutX="285.0" layoutY="66.0" mnemonicParsing="false" onAction="#pasarPal" prefHeight="14.0" prefWidth="26.0" style="-fx-background-color: #b5bac9;" text="&gt;">
+            <font>
+               <Font name="DejaVu Sans Condensed Bold" size="12.0" />
+            </font>
+         </Button>
+         <Button fx:id="b" layoutX="200.0" layoutY="66.0" mnemonicParsing="false" onAction="#antPal" style="-fx-background-color: #b5bac9;" text="&lt;">
+            <font>
+               <Font name="DejaVu Sans Condensed Bold" size="12.0" />
+            </font>
+         </Button>
+         <Label fx:id="posicion" layoutX="237.0" layoutY="71.0" text="0 de 0">
+            <font>
+               <Font name="DejaVu Sans Condensed Bold" size="12.0" />
+            </font>
+         </Label>
+         <TextArea fx:id="textA" editable="false" layoutX="112.0" layoutY="6.0" prefHeight="45.0" prefWidth="288.0" style="-fx-background-color: #b5bac9;" />
+         <Button fx:id="aa" layoutX="200.0" layoutY="103.0" mnemonicParsing="false" onAction="#colocar" style="-fx-background-color: #b5bac9;" text="Colocar palabra">
+            <font>
+               <Font name="DejaVu Serif Condensed Bold" size="12.0" />
+            </font>
+         </Button>
+         <Button fx:id="ab" layoutX="196.0" layoutY="152.0" mnemonicParsing="false" onAction="#getPath" style="-fx-background-color: #b5bac9;" text="Abrir documento">
+            <font>
+               <Font name="DejaVu Serif Condensed Bold" size="12.0" />
+            </font>
+         </Button>
+      </children>
+   </Pane>
 </VBox>
